adm can insert a product

--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -1,7 +1,5 @@
-<% form_for @new_product do |f| %>
-  name:        <%= f.text_field :name %>
-  description: <%= f.text_area :description, size: "60x12" %>
-  save:        <%= f.submit "save" %>
+<%= form_for [:admin, @new_product] do |f| %>
+  name:        <%= f.text_field :name, id: "name" %>
+  description: <%= f.text_area  :description, size: "30x3", id: "description" %>
+  save:        <%= f.submit "save", id: "submit" %>
 <% end %>
-
-hwekjdds
