categories are displayed

--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,10 +1,14 @@
-no products
 
 <% if @products.any? %>
   <% @products.each do |product| %>
     <%= product.name %>
     <%= product.description %>
+    <%= product.categories.each do |category| %>
+      <%= category %>
+    <% end %>
   <% end %>
+<% else %>
+  no products
 <% end %>
 
 <%= link_to "insert new product", new_admin_product_path %>
