--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -1,6 +1,6 @@
 <%= form_for [:admin, @product] do |f| %>
   name:        <%= f.text_field :name, id: "name" %>
   description: <%= f.text_area  :description, size: "30x3", id: "description" %>
-  category:    <%= f.collection_check_boxes :category_ids, @category, :id, :title %>
+  category:    <%= f.collection_check_boxes :category_ids, @category, :id, :title, id: "category_checkbox" %>
   save:        <%= f.submit "save", id: "submit" %>
 <% end %>
