new category can be added

--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -11,4 +11,5 @@
   no products
 <% end %>
 
-<%= link_to "insert new product", new_admin_product_path %>
+<%= link_to "insert new product",  new_admin_product_path %>
+<%= link_to "insert new category", new_admin_category_path %>
