--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,6 +1,9 @@
 <% if @categories.any? %>
   <% @categories.each do |category| %>
     <%= category.title %>
+    <% category.subcategories.each do |subcategory| %>
+      <%= subcategory.title %>
+    <% end %><br><br>
   <% end %>
 <% end %>
 
