--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <%= link_to "All categories", admin_categories_path %>
+  <%= link_to "All products", admin_products_path %><br><br>
 
 <%= yield %>
 
