--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -9,7 +9,7 @@
       <%= label(category.title, :category) %>
       <%= category.title %><br>
     <% end %>
-    <%= button_to "Add to Cart", {controller: "lines", action: "create", product_id: product.id}, method: "POST", remote: true %><br><br>
+    <%= button_to "Add to Cart", {controller: "lines", action: "create", product_id: product.id}, remote: true %><br><br>
   <% end %>
 <% else %>
   no products
