--- a/app/views/store/show.html.erb
+++ b/app/views/store/show.html.erb
@@ -1,4 +1,4 @@
 <%= @product.name %>
 <%= @product.description %>
 
-<%= button_to "Add to Cart", {controller: "lines", action: "create", product_id: @product.id}, method: "POST" %>
+<%= button_to "Add to Cart", {controller: "lines", action: "create", product_id: @product.id } %>
